<resources>
    <string name="app_name">docnearby</string>
    <string name="login">Login</string>
    <string name="username">Email as the Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="dontHaveAccount"> Don\'t have account yet? </string>
    <string name="rememberAccount">Remember Account</string>
    <string name="rememberPassword">Remember Password</string>
    <string name="fillbelow">Sign Up Below</string>
    <string name="searchByLoc">Search by Location</string>
    <string name="searchBySympt">Search by Symptom</string>
    <string name="limit">Limit by</string>
    <string name="search">Search</string>
    <string name="TypeLocationPrompt">Type Location(required)</string>
    <string name="TypeSymptomPrompt">Type Symptoms</string>
    <string name="SearchDoctors">Search Doctors</string>
    <string name="PracticeSearch">Practice Search</string>
    <string name="SearchResults">Search Results</string>
    <string name="practiceName">Practice Name </string>
    <string name="Search_by_Practice">Search by Practice</string>
    

</resources>
