<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/searchLocation"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/byDoc"
            android:hint="@string/TypeLocationPrompt"/>
    <Button
            android:text="@string/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/search_button"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/searchTextSympton"/>
    <TextView
            android:text="@string/searchByLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/byDoc" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/searchBySympt"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/bySpec"
            app:layout_constraintTop_toBottomOf="@+id/searchLocation" app:layout_constraintHorizontal_bias="0.48"
            android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/searchTextSympton"
            app:layout_constraintTop_toBottomOf="@+id/bySpec"
            android:hint="@string/TypeSymptomPrompt"/>
    <Button
            android:text="@string/PracticeSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/PracSearch"
            app:layout_constraintTop_toBottomOf="@+id/search_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>